<resources>
    <string name="app_name">Trainee Application</string>
    <string name="hello">Hello</string>
    <string name="andersen">Andersen</string>
    <string name="button1">Second Part</string>
    <string name="button3">Third Part</string>
    <string name="text_default">Nothing</string>
    <string name="enter">Enter your text:</string>
    <string name="hint">text</string>
    <string name="button2">Show</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="message">Message</string>

    <string name="user_name">Timofei</string>
    <string name="nav_sent">Sent message</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_open">Open navigation panel</string>
    <string name="nav_close">Close navigation panel</string>
    <string name="show_toast">Show me Toast</string>

</resources>
