<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_sent"
            android:checked="true"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_gallery"/>

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_trash"/>

    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_inbox"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_gallery"/>

            <item
                android:id="@+id/nav_mash"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_trash"/>
        </menu>
    </item>

</menu>