<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screen"
    tools:context=".BlankFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_margin_top_10"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/enter"
        android:textSize="@dimen/text_size_30" />

    <EditText
        android:id="@+id/someText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin_top_20"
        android:hint="@string/hint"
        android:padding="@dimen/activity_margin_top_10" />

    <TextView
        android:id="@+id/watch_someText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/textWatcher"
        android:layout_marginTop="@dimen/activity_margin_top_20"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_default"
        android:textColor="@color/watcher" />

    <Button
        android:id="@+id/show_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin_top_20"
        android:text="@string/show_toast"/>
</LinearLayout>